# PROJECT-StudentWorkspace

./: README.md  ОтчетАРМ-ДАСАЕВАНИНИЛИНА.docx
SWP/: CMakeLists.txt  databasemanager.cpp  databasemanager.h  main.cpp  mainpagewidget.cpp  mainpagewidget.h  mainwindow.cpp  mainwindow.h  noteswidget.cpp  noteswidget.h  pomodoroglwidget.cpp  pomodoroglwidget.h  pomodorowidget.cpp  pomodorowidget.h  reminderwidget.cpp  reminderwidget.h  resources.qrc  schedulewidget.cpp  schedulewidget.h  settingswidget.cpp  settingswidget.h  statisticswidget.cpp  statisticswidget.h  style.qss
